Fix for bug #1340 (More careful checks if we met proper Create_file_log_event before Append or Exec event we are processing now)